# audl-analytics

./: .env  .gitignore  README.md  docker-compose.yaml  main.py  makefile  notes.md  pyproject.toml  requirements.txt  setup.cfg  setup.sh
analytics/: dbt_project.yml  profiles.yml  pyproject.toml
analytics/macros/: parse_game_date.sql
audl-analytics/: __init__.py
audl-analytics/assets/: database_utils.py
dbt/: dbt_project.yml  profiles.yml
dbt/seeds/: ext_player_ids.csv
deprecated/: .env  .env-example  README.md  docker-compose.yaml  makefile  notes.md  pyproject.toml  requirements.txt  setup.py  setup.sh
deprecated/audl-analytics/: __init__.py
deprecated/dbt/: dbt_project.yml
deprecated/notes/: notes.md  projects.md
diagrams/: PlayerTeam-ERDiagram.drawio
ingestion/: makefile  pyproject.toml
ingestion/scripts/: batch_process.sh  downloads.sh  process.sh  testings.sh
ingestion/src/: constants.py  extract_seasonal.py  extract_weekly.py  main.py  pipeline_utils.py  player_game_stats.py  timeline.py  transform_blocks.py  transform_games.py  transform_point_lineups.py  transform_pulls.py  transform_throws.py
ingestion/tests/: test_pipeline.py  test_player_game_stats.py
notes/: modeling.md  notes.md  projects.md
playground/: audl_parse.py  eda.ipynb  events.ipynb  generate_holidays.py  load.ipynb  player_game_stats.py  throws_stats.py  validate_stats.py
src/assets/: main.py
src/backfill/: README.md
src/extract/: audl_utils.py  extract_all_game_events.py  (+4 more)
tests/: __init__.py  test_connections.py
utils/: connections.py
(+68 files in other folders)
