[project]
name = "audl-ingestion"
version = "0.1.0"
description = "AUDL/UFA analytics ingestion pipeline"
requires-python = ">=3.14"
dependencies = [
    "audl>=0.0.19",
    "pandas>=2.2",
    "requests>=2.31",
]

[project.scripts]
audl-pipeline = "main:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
